<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/image_creator_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/image_creator_button_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shared_logo">

        <!-- Options: amount -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.RandomImageCreator.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/image_creator_option_amount_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_creator_option_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Option: width -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.RandomImageCreator.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/image_creator_option_width_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_creator_option_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Option: height -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.RandomImageCreator.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/image_creator_option_height_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_creator_option_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Option: pattern -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            style="@style/Theme.RandomImageCreator.DropDownField"
            android:hint="@string/image_creator_option_pattern_hint">

            <AutoCompleteTextView
                android:id="@+id/image_creator_option_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Option: format -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            style="@style/Theme.RandomImageCreator.DropDownField"
            android:hint="@string/image_creator_option_image_file_format_hint">

            <AutoCompleteTextView
                android:id="@+id/image_creator_option_image_file_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Option: iterations -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_creator_option_iterations_layout"
            style="@style/Theme.RandomImageCreator.InputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:hint="@string/image_creator_option_iterations_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_creator_option_iterations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/image_creator_button_create"
        style="@style/Theme.RandomImageCreator.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_creator_button_create"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_creator_form" />

    <include
        android:id="@+id/shared_logo"
        layout="@layout/shared_top_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
